--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div id="b_box1"></div>
         <div class="ikon">
-            <img src="/img/IMG_1055.JPG">
+            <img src="/img/image.png">
         </div>
         <ul>
             <li>
