--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div id="b_box1"></div>
         <div class="ikon">
-            <img src="/img/image.JPG">
+            <img src="img/image.JPG">
         </div>
         <ul>
             <li>
