--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
         <div id="HOME">
             <div id="b_box"></div>
+            <p>nanano's</p>
             <h1>PORTFOLIO</h1>
         </div>
         <nav class="menu-nav">
@@ -33,7 +34,8 @@
         <h2>ABOUT</h2>
         <div class="profile">
             <h2>太田奈菜乃</h2>
-            <p>出身　　　愛知県</p>
+            <p>出身　愛知県<br>
+            好きなこと　Kpop、睡眠</p>
         </div>
         <div id="b_box1"></div>
         <div class="ikon">
