--- a/mv.html
+++ b/mv.html
@@ -20,7 +20,7 @@
         <h2>WORKS</h2>
         <div id="b_box1">
             <div class="work">
-                <video src="資料/x22018_おかえり.mp4"autoplay width="670px"></video>
+                <video controls src="資料/x22018_おかえり.mp4"autoplay width="670px"></video>
                 <div class="text">
                 <h1>MV</h1>
                 <h3>制作期間:1週間<br>使用したソフト：After Effects,Premiere Pro</h3>
