--- a/sakana.html
+++ b/sakana.html
@@ -20,7 +20,7 @@
         <h2>WORKS</h2>
         <div id="b_box1">
             <div class="work">
-                <video src="資料/x22018_太田奈菜乃.mp4"autoplay width="670px"></video>
+                <video controls src="資料/x22018_太田奈菜乃.mp4"autoplay width="670px"></video>
                 <div class="text">
                 <h1>MAYA fish</h1>
                 <h3>制作期間:1ヶ月<br>使用したソフト：Illustrator,Premiere Pro<br>　　　After Effects<br></h3>
